[project]
name = "baloto-com"
version = "2.1.1"
description = "Applicacion para calcular datos estadisticos en los juegos Miloto y Baloto"
authors = [
    {name = "Dani Vainstein",email = "solmarkn@gmail.com"}
]
license = {text = "MIT"}
repository = "https://github.com/daniv/baloto-com.git"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["cli", "commands", "miloto", "baloto"]
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-extra-types (>=2.10.4,<3.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)"
]

[tool.poetry.scripts]
miloto = 'miloto.__main__:main'
baloto = 'baloto.__main__:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [
    {include = "miloto", from = "src"},
]
include = [{ path = "tests", format = "sdist" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
furo = "^2024.8.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
allure-pytest = "^2.14.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"

[tool.black]
line-length = 100
verbose = true

[tool.mypy]
strict = true
files = ["src", "tests"]
pretty = true

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
python_files = ["tests_*.py"]
python_functions = ["*_test"]
norecursedirs = ["src", ".idea", ".pytest_cache"]
enable_assertion_pass_hook = true
