[project]
name = "baloto"
version = "2.1.1"
description = "Applicacion para calcular datos estadisticos en los juegos Miloto y Baloto"
authors = [
    {name = "Dani Vainstein",email = "solmarkn@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["cli", "commands", "miloto", "baloto"]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-extra-types (>=2.10.4,<3.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)"
]

[tool.poetry]
requires-poetry = ">=2.1"
packages = [{include = "baloto", from = "src"}]
include = [{ path = "tests", format = "sdist" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

[project.urls]
Repository = "https://github.com/daniv/baloto-com.git"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
allure-pytest = "^2.14.2"
pytest-xdist = "^3.6.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
setuptools = "^80.7.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
verbose = true

[tool.mypy]
strict = true
files = ["src", "tests"]
pretty = true

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
python_files = ["tests_*.py"]
python_functions = ["*_test"]
norecursedirs = ["src", ".idea", ".pytest_cache"]
enable_assertion_pass_hook = true
addopts = [
    "--alluredir", "allure-results",
    "--clean-alluredir"
]


[tool.baloto]
description = """
Baloto es un juego novedoso de tipo loto en línea de suerte y azar,
donde el jugador por $5.700 apuesta por un gran acumulado multimillonario inicial de $4.000 millones de pesos,
que se irá acumulando en cada sorteo si no se tiene un ganador.

Jugar Baloto y Revancha es muy fácil:
- Elige 5 numeros del 1 al 43
- y una SUPERBALOTA con numeros de 1 a 16
"""
min_number = 1
max_number = 43
min_balota = 1
max_balota = 16

[tool.miloto]
description = """
MiLoto es una mecánica creada por Baloto para aquellos que se la juegan por cumplir sus sueños,
donde por solo $4.000 podrán ganar un acumulado desde $120 millones

Elige tus 5 números de la suerte del 1 al 39
"""
min_number = 1
max_number = 39

